[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rca_data_tools"
version = "1.1.0"
description = "Utilities for working with Regional Cabled Array Data."
authors = [
  { name = "RCA Data Team", email = "jduprey@uw.edu" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "bs4",
    "cmocean",
    "dask",
    "fsspec",
    "gspread",
    "loguru",
    "matplotlib",
    "netcdf4",
    "numba",
    "numpy",
    "pandas<2", # TODO we should move to pandas > 2
    "pathlib",
    "prefect>2",
    "prefect-aws",
    "requests",
    "s3fs",
    "scipy",
    "xarray",
    "zarr",
]

[project.scripts]
    create_dashboard = "rca_data_tools.qaqc.plots:main"
    generate_hitl_tables = "rca_data_tools.qaqc.notes:main"
    qaqc_pipeline = "rca_data_tools.qaqc.pipeline:main"
    qaqc_index = "rca_data_tools.qaqc.index:main"