[metadata]
name = rca_data_tools
maintainer = RCA Data Team
maintainer_email = ''
description = Utilities for working with Regional Cabled Array Data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OOI-CabledArray/rca-data-tools
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
author = RCA Data Team
author_email = ''
platforms = OS Independent

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    cmocean
    dask
    fsspec
    gspread
    loguru
    matplotlib
    netcdf4
    numba
    numpy
    pandas
    pathlib
    prefect
    requests
    s3fs
    scipy
    xarray
    zarr
python_requires = >=3.7
setup_requires =
    setuptools_scm

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-xdist
    pytest-mock
lint =
    black
    check-manifest
    flake8
    flake8-builtins
    flake8-comprehensions
    flake8-mutable
    flake8-print
    isort
    mypy
    numpydoc
    pre-commit
    pylint
docs =
    sphinx
    sphinx-automodapi
all =
    %(test)s
    %(lint)s
    %(docs)s

[options.entry_points]
console_scripts =
    create_dashboard = rca_data_tools.qaqc.plots:main
    generate_hitl_tables = rca_data_tools.qaqc.notes:main
    qaqc_pipeline = rca_data_tools.qaqc.pipeline:main
    qaqc_index = rca_data_tools.qaqc.index:main
